@@ -1,3 +1,9 @@
+2009-09-11  Philippe De Muyter  <phdm@macqel.be>
+
+	* binary.c (binary_object_p): Remove bfd_external_binary_architecture
+	hack.  objcopy `-B' (`--binary-architecture') option is now handled
+	in a generic way.
+
 2009-09-11  Nick Clifton  <nickc@redhat.com>
 
 	* rs6000-core.c (read_hdr): Fix typo in recent C++ compatibility
